[package]
name = "pgmer1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
shared = []
pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pgrx_test = []

[dependencies]
pgrx = "0.11.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_json_path = "0.6.3"

dotenv = { version = "0.15.0" }

[dev-dependencies]
pgrx-tests = "=0.11.0"
